Fixed overflow errors

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,7 @@
 .navigation a:link, .navigation a:visited, .navigation a:active{
     color: white;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 .nav-right{
@@ -52,7 +53,7 @@
     height:100vh;
     min-height:500px;
     max-height:1080px;
-    background-color: #030326;
+    background-color: white;
     transition: background-color 1s ease;
     background-size:cover;
     /* padding:15px; */
